@@ -32,161 +32,172 @@ import coinone.tran.vo.TickerDtlVO;
 @Controller
 public class HomeController {
 
-	private static final Logger logger = LoggerFactory.getLogger(HomeController.class);
+    private static final Logger logger = LoggerFactory.getLogger(HomeController.class);
 
-	@Inject
-	private TickerDAO tickerDAO;
+    @Inject
+    private TickerDAO tickerDAO;
 
-	@Inject
-	private OrderDAO orderDAO;
+    @Inject
+    private OrderDAO orderDAO;
 
-	@Inject
-	private TranConfigDAO tranConfigDAO;
+    @Inject
+    private TranConfigDAO tranConfigDAO;
 
-	/**
-	 * Simply selects the home view to render by returning its name.
-	 */
-	@RequestMapping(value = "/", method = RequestMethod.GET)
-	public String home(Locale locale, Model model) {
-		logger.info("Welcome home! The client locale is {}.", locale);
+    /**
+     * Simply selects the home view to render by returning its name.
+     */
+    @RequestMapping(value = "/", method = RequestMethod.GET)
+    public String home(Locale locale, Model model) {
+        logger.info("Welcome home! The client locale is {}.", locale);
 
-		Date date = new Date();
-		DateFormat dateFormat = DateFormat.getDateTimeInstance(DateFormat.LONG, DateFormat.LONG, locale);
+        Date date = new Date();
+        DateFormat dateFormat = DateFormat.getDateTimeInstance(DateFormat.LONG, DateFormat.LONG, locale);
 
-		String formattedDate = dateFormat.format(date);
+        String formattedDate = dateFormat.format(date);
 
-		model.addAttribute("serverTime", formattedDate);
+        model.addAttribute("serverTime", formattedDate);
 
-		return "home";
-	}
+        return "home";
+    }
 
-	@RequestMapping(value = "/jsonTickerList", method = RequestMethod.GET)
-	public @ResponseBody List<TickerDtlVO> jsonTickerList(@RequestParam Map<String, String> params) {
-		String currency = params.get("currency");
-		if (StringUtils.isEmpty(currency)) {
-			currency = Constants.ETH_KRW;
-		}
-		TickerDtlVO vo = new TickerDtlVO();
-		vo.setCurrency(currency);
-		List<TickerDtlVO> list = tickerDAO.getDailyList(vo);
+    @RequestMapping(value = "/jsonTickerList", method = RequestMethod.GET)
+    public @ResponseBody
+    List<TickerDtlVO> jsonTickerList(@RequestParam Map<String, String> params) {
+        String currency = params.get("currency");
+        if (StringUtils.isEmpty(currency)) {
+            currency = Constants.ETH_KRW;
+        }
+        TickerDtlVO vo = new TickerDtlVO();
+        vo.setCurrency(currency);
+        List<TickerDtlVO> list = tickerDAO.getDailyList(vo);
 
-		return list;
-	}
+        return list;
+    }
 
-	@RequestMapping(value = "/jsonTicker", method = RequestMethod.GET)
-	public @ResponseBody TickerDtlVO jsonTicker(@RequestParam Map<String, String> params) {
-		String currency = params.get("currency");
-		if (StringUtils.isEmpty(currency)) {
-			currency = Constants.ETH_KRW;
-		}
-		TickerDtlVO vo = new TickerDtlVO();
-		vo.setCurrency(currency);
-		vo = tickerDAO.getLastestTicker(vo);
-		return vo;
-	}
+    @RequestMapping(value = "/jsonTicker", method = RequestMethod.GET)
+    public @ResponseBody
+    TickerDtlVO jsonTicker(@RequestParam Map<String, String> params) {
+        String currency = params.get("currency");
+        if (StringUtils.isEmpty(currency)) {
+            currency = Constants.ETH_KRW;
+        }
+        TickerDtlVO vo = new TickerDtlVO();
+        vo.setCurrency(currency);
+        vo = tickerDAO.getLastestTicker(vo);
+        return vo;
+    }
 
-	@RequestMapping(value = "/lineChart", method = RequestMethod.GET)
-	public String lineChart(@RequestParam Map<String, String> params, Model model)  throws ParseException {
-		String currency = params.get("currency");
-		if (StringUtils.isEmpty(currency)) {
-			currency = Constants.ETH_KRW;
-		}
-		TickerDtlVO vo = new TickerDtlVO();
-		vo.setCurrency(currency);
-		model.addAttribute("currency", currency);
-		vo = tickerDAO.getLastestTicker(vo);
-		Long last = null;
-		if (null != vo)
-		{
-			last = vo.getLast();
-		}
-		model.addAttribute("last", last);
-		return "lineChart";
-	}
+    @RequestMapping(value = "/lineChart", method = RequestMethod.GET)
+    public String lineChart(@RequestParam Map<String, String> params, Model model) throws ParseException {
+        String currency = params.get("currency");
+        if (StringUtils.isEmpty(currency)) {
+            currency = Constants.ETH_KRW;
+        }
+        TickerDtlVO vo = new TickerDtlVO();
+        vo.setCurrency(currency);
+        model.addAttribute("currency", currency);
+        vo = tickerDAO.getLastestTicker(vo);
+        Long last = null;
+        if (null != vo) {
+            last = vo.getLast();
+        }
+        model.addAttribute("last", last);
+        return "lineChart";
+    }
 
-	/**
-	 * Simply selects the home view to render by returning its name.
-	 * @throws ParseException
-	 */
-	@RequestMapping(value = "/tran/listLimitOrders", method = RequestMethod.GET)
-	public String listLimitOrders(@RequestParam Map<String, String> params, Model model) throws Exception {
-		String currency = params.get("currency");
+    /**
+     * Simply selects the home view to render by returning its name.
+     *
+     * @throws ParseException
+     */
+    @RequestMapping(value = "/tran/listLimitOrders", method = RequestMethod.GET)
+    public String listLimitOrders(@RequestParam Map<String, String> params, Model model) throws Exception {
+        String currency = params.get("currency");
 
-		if (StringUtils.isEmpty(currency)) currency= Constants.COIN_XRP;
+        if (StringUtils.isEmpty(currency)) currency = Constants.COIN_XRP;
 
-		CallAPIService comm = new CallAPIService();
-		LimitOrderVO vo = comm.getLimitOrders(currency);
-		model.addAttribute("ordersOpenList", vo.getLimitOrders());
+        CallAPIService comm = new CallAPIService();
+        LimitOrderVO vo = comm.getLimitOrders(currency);
+        model.addAttribute("ordersOpenList", vo.getLimitOrders());
 
-		model.addAttribute("currency", currency);
+        model.addAttribute("currency", currency);
 
-		OrderVO orderVO = new OrderVO();
-		orderDAO.getOrderList(orderVO);
+        OrderVO orderVO = new OrderVO();
+        orderDAO.getOrderList(orderVO);
 
-		return "tran/listOrdersOpen";
-	}
+        return "tran/listOrdersOpen";
+    }
 
-	/**
-	 * Simply selects the home view to render by returning its name.
-	 * @throws ParseException
-	 */
-	@RequestMapping(value = "/tran/cancelOrder", method = RequestMethod.GET)
-	public String cancelOrder(@RequestParam Map<String, String> params, Model model) throws Exception {
-		String sCurrency = "";
-		sCurrency = params.get("currency");
-		String orderId = params.get("orderId");
-		String qty = params.get("qty");
-		String price = params.get("price");
-		String type = params.get("type");
+    /**
+     * Simply selects the home view to render by returning its name.
+     *
+     * @throws ParseException
+     */
+    @RequestMapping(value = "/tran/cancelOrder", method = RequestMethod.GET)
+    public String cancelOrder(@RequestParam Map<String, String> params, Model model) throws Exception {
+        String sCurrency = "";
+        sCurrency = params.get("currency");
+        String orderId = params.get("orderId");
+        String qty = params.get("qty");
+        String price = params.get("price");
+        String type = params.get("type");
 
-		if (StringUtils.isEmpty(sCurrency)) sCurrency= Constants.COIN_XRP;
+        if (StringUtils.isEmpty(sCurrency)) sCurrency = Constants.COIN_XRP;
 
-		CallAPIService api = new CallAPIService();
+        CallAPIService api = new CallAPIService();
 
-		OrderVO orderVO = new OrderVO();
-		orderVO.setCurrency(sCurrency);
-		orderVO.setOrderId(orderId);
-		orderVO.setQty(Double.valueOf(qty));
-		orderVO.setPrice(new Long(price));
-		orderVO.setType(type);
-		api.cancelOrder(orderVO);
+        OrderVO orderVO = new OrderVO();
+        orderVO.setCurrency(sCurrency);
+        orderVO.setOrderId(orderId);
+        orderVO.setQty(Double.valueOf(qty));
+        orderVO.setPrice(new Long(price));
+        orderVO.setType(type);
+        api.cancelOrder(orderVO);
 
-		return "redirect:listLimitOrders?currency=" + sCurrency;
-	}
+        return "redirect:listLimitOrders?currency=" + sCurrency;
+    }
 
-	/**
-	 * Simply selects the home view to render by returning its name.
-	 * @throws ParseException
-	 */
-	@RequestMapping(value = "/tran/registerOrderReq", method = RequestMethod.GET)
-	public String registerOrderReq(@RequestParam Map<String, String> params, Model model) throws Exception {
-		String sCurrency = "";
-		sCurrency = params.get("currency");
-		String qty = params.get("qty");
-		String reqCnt = params.get("reqCnt");
+    /**
+     * Simply selects the home view to render by returning its name.
+     *
+     * @throws ParseException
+     */
+    @RequestMapping(value = "/tran/registerOrderReq", method = RequestMethod.GET)
+    public String registerOrderReq(@RequestParam Map<String, String> params, Model model) throws Exception {
+        String sCurrency = "";
+        sCurrency = params.get("currency");
+        String qty = params.get("qty");
+        String reqCnt = params.get("reqCnt");
 
-		if (StringUtils.isEmpty(sCurrency)) sCurrency= Constants.COIN_XRP;
+        if (StringUtils.isEmpty(sCurrency)) sCurrency = Constants.COIN_XRP;
 
-		CallAPIService api = new CallAPIService();
+        CallAPIService api = new CallAPIService();
 
-		OrderVO vo = new OrderVO();
-		vo.setCurrency(sCurrency);
-		vo.setPrice((long) api.getTicker(sCurrency).getLast());
-		vo.setQty(new Double(qty));
-		vo.setReqCnt(new Integer(reqCnt));
+        OrderVO vo = new OrderVO();
+        vo.setCurrency(sCurrency);
+        vo.setPrice((long) api.getTicker(sCurrency).getLast());
+        vo.setQty(new Double(qty));
+        vo.setReqCnt(new Integer(reqCnt));
+        Integer base = 0;
+        if (Constants.COIN_XRP.equals(sCurrency)) {
+            base = 1;
+        } else if (Constants.COIN_BCH.equals(sCurrency)) {
+            base = 1000;
+        }
+        vo.setBase(base);
 
-		orderDAO.deleteOrder(vo);
-		orderDAO.registerBuyReq(vo);
-		orderDAO.registerSellReq(vo);
+        orderDAO.deleteOrder(vo);
+        orderDAO.registerBuyReq(vo);
+        orderDAO.registerSellReq(vo);
 
-		return "redirect:listLimitOrders?currency=" + sCurrency;
-	}
+        return "redirect:listLimitOrders?currency=" + sCurrency;
+    }
 
-	@RequestMapping(value = "/tran/listTranConfig", method = RequestMethod.GET)
-	public String listTranConfig(@RequestParam Map<String, String> params, Model model) throws Exception {
-		List<TranConfigVO>  tranConfigVOList = tranConfigDAO.getTranConfigList();
-		model.addAttribute("tranConfigVOList", tranConfigVOList);
+    @RequestMapping(value = "/tran/listTranConfig", method = RequestMethod.GET)
+    public String listTranConfig(@RequestParam Map<String, String> params, Model model) throws Exception {
+        List<TranConfigVO> tranConfigVOList = tranConfigDAO.getTranConfigList();
+        model.addAttribute("tranConfigVOList", tranConfigVOList);
 
-		return "tran/listTranConfig";
-	}
+        return "tran/listTranConfig";
+    }
 }
